--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,6 +1,5 @@
-
 .page-header {
-    background-color: rgb(138, 49, 49);
+    background-color: #C25100;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -9,7 +8,6 @@
     color: #ffffff;
     font-size: 36pt;
     text-decoration: none;
-    font-family: 'Lobster', cursive;
 }
 
 .content {
@@ -40,15 +38,9 @@ h1, h2, h3, h4 {
 }
 
 .post {
-    padding-left: 15px;
     margin-bottom: 70px;
 }
 
 .post h2 a, .post h2 a:visited {
     color: #000000;
 }
-
-.glyphicon-plus {
-    color: #000000;
-}
-
