--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,13 +10,16 @@
 
     <body>
         <div class="page-header">
-            <h1><a href="/">Dae nóia</a></h1>
+            <h2><a href="/">Hello nóia</a></h2>
         </div>
 
         <div class="content container">
-            <div class="row">
-                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span>Add post</a>
-            </div>
+            {% if user.is_authenticated %}
+                <div class="row">
+                    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span>Add post</a>
+                </div>
+            {% endif %}
+            
             <div class="row">
                 <div class="col-md-8">
                 {% block content %}
