--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -44,3 +44,11 @@ h1, h2, h3, h4 {
 .post h2 a, .post h2 a:visited {
     color: #000000;
 }
+
+.glyphicon-plus {
+    color: #000000;
+}
+
+.glyphicon-plus.grey {
+    color: rgb(221, 221, 221);
+}
